# krot

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README-docker.md  README.md  README.ru.md  SECURITY.md  justfile
.github/workflows/: ci.yml  docker.yml  release.yml
crates/krot-client/: Cargo.toml
crates/krot-client/examples/: preview_login.rs
crates/krot-client/src/: config.rs  enroll.rs  error.rs  inspector.rs  lib.rs  local_auth.rs  login_page.rs  main.rs  proxy.rs  session.rs  tls.rs  tunnel.rs
crates/krot-client/tests/: e2e.rs
crates/krot-proto/: Cargo.toml
crates/krot-proto/fuzz/: Cargo.toml
crates/krot-proto/fuzz/fuzz_targets/: client_frame_decode.rs  mux_header_decode.rs  server_frame_decode.rs
crates/krot-proto/src/: auth.rs  consts.rs  error.rs  frames.rs  framing.rs  ids.rs  lib.rs  mux.rs  stream.rs
crates/krot-proto/tests/: fuzz_parsers.rs  roundtrip.rs
crates/krot-server/: Cargo.toml
crates/krot-server/fuzz/: Cargo.toml
crates/krot-server/fuzz/fuzz_targets/: authorized_keys_parse.rs  tls_client_hello.rs
crates/krot-server/src/: admin.rs  admin_api.rs  config.rs  error.rs  fsync.rs  handshake.rs  identity.rs  keys.rs  lib.rs  main.rs  metrics.rs  peer_lookup.rs  peers.rs  rate.rs  registry.rs  server.rs  session.rs  sockets.rs  tunnel.rs
crates/krot-server/src/domain/: acme.rs  http.rs  https.rs  mod.rs  replay.rs  sni.rs  tls_source.rs
crates/krot-server/tests/: acme.rs  admin_api.rs  domain_e2e.rs  e2e.rs  federation.rs  inspect.rs  multicore.rs  policy.rs  rate.rs  resume.rs  tcp_fallback.rs  tcp_fallback_client.rs  tcp_over_443.rs
crates/krot-transport/: Cargo.toml
crates/krot-transport/src/: conn.rs  endpoint.rs  error.rs  frame.rs  lib.rs  relay.rs  tcp_listener.rs  tcp_mux.rs
crates/krot-transport/tests/: first_byte.rs  integration.rs
scripts/soak/: env.example  load.sh  report.sh  server.sh
