[workspace]
resolver = "2"
members = [
    "crates/krot-proto",
    "crates/krot-transport",
    "crates/krot-server",
    "crates/krot-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/krottunnel/krot"
homepage = "https://github.com/krottunnel/krot"
readme = "README.md"

[workspace.dependencies]
krot-proto     = { path = "crates/krot-proto",     version = "0.1.0" }
krot-transport = { path = "crates/krot-transport", version = "0.1.0" }

postcard       = { version = "1.0",  default-features = false, features = ["use-std"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_bytes    = "0.11"
ed25519-dalek  = { version = "2.1",  features = ["rand_core"] }
rand_core      = "0.6"
blake3         = "1.5"
thiserror      = "1.0"

tokio          = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "signal", "sync", "time"] }
quinn          = "0.11"
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
rcgen          = "0.13"

clap           = { version = "4.5",  features = ["derive"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes          = "1.7"
governor       = "0.6"
hex            = "0.4"
rand           = "0.8"
base32         = "0.5"
x509-parser    = "0.16"
tempfile       = "3.10"
time           = { version = "0.3", features = ["std"] }
base64         = "0.22"
sha2           = "0.10"
toml           = "0.8"
dirs           = "5.0"
httparse       = "1.9"
serde_json     = "1.0"
instant-acme   = "0.7"
socket2        = { version = "0.5", features = ["all"] }
notify         = "6.1"
async-trait    = "0.1"
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring"] }
proptest       = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic     = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
must_use_candidate       = "allow"
# The protocol crate does a lot of intentional byte-level truncation.
cast_possible_truncation = "allow"
doc_markdown             = "allow"
missing_panics_doc       = "allow"
similar_names            = "allow"
# Style-only pedantic checks we don't enforce — many trigger on
# ergonomic code and would just add noise to reviews:
too_many_lines           = "allow"
match_same_arms          = "allow"
format_push_string       = "allow"
used_underscore_binding  = "allow"
unit_arg                 = "allow"
if_not_else              = "allow"
items_after_statements   = "allow"
needless_pass_by_value   = "allow"
trivially_copy_pass_by_ref = "allow"
match_wildcard_for_single_variants = "allow"
cast_lossless            = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
