[package]
name         = "krot-client"
description  = "Client CLI and library for krot — self-hosted ngrok alternative in Rust."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = "../../README.md"
documentation = "https://docs.rs/krot-client"
keywords     = ["tunnel", "ngrok", "quic", "self-hosted", "reverse-proxy"]
categories   = ["network-programming", "command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "krot"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
krot-proto     = { workspace = true }
krot-transport = { workspace = true }
tokio          = { workspace = true }
quinn          = { workspace = true }
rustls         = { workspace = true }
clap           = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror      = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
dirs           = { workspace = true }
httparse       = { workspace = true }
ed25519-dalek  = { workspace = true }
rand           = { workspace = true }
x509-parser    = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }
base64         = { workspace = true }

[dev-dependencies]
tempfile      = { workspace = true }
proptest      = { workspace = true }
tokio         = { workspace = true, features = ["macros", "test-util", "time"] }
krot-server   = { path = "../krot-server" }
