[package]
name         = "krot-proto"
description  = "Wire types and framing for the KROT tunnel protocol."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
postcard      = { workspace = true }
serde         = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
proptest  = { workspace = true }
