[package]
name         = "krot-server"
description  = "KROT relay server daemon."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "krot-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
krot-proto     = { workspace = true }
krot-transport = { workspace = true }
tokio          = { workspace = true }
quinn          = { workspace = true }
rustls         = { workspace = true }
rcgen          = { workspace = true }
clap           = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror      = { workspace = true }
serde          = { workspace = true }
rand           = { workspace = true }
blake3         = { workspace = true }
base32         = { workspace = true }
x509-parser    = { workspace = true }
hex            = { workspace = true }
time           = { workspace = true }
base64         = { workspace = true }
sha2           = { workspace = true }
httparse       = { workspace = true }
instant-acme   = { workspace = true }
serde_json     = { workspace = true }
socket2        = { workspace = true }
notify         = { workspace = true }
governor       = { workspace = true }
async-trait    = { workspace = true }
tokio-rustls   = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
proptest           = { workspace = true }
tokio              = { workspace = true, features = ["macros", "test-util", "time"] }
ed25519-dalek      = { workspace = true }
rand               = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen              = { workspace = true }
sha2               = { workspace = true }
x509-parser        = { workspace = true }
krot-client        = { path = "../krot-client" }
