[package]
name         = "krot-transport"
description  = "QUIC + TCP-fallback transport for the krot tunnel protocol."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = "../../README.md"
documentation = "https://docs.rs/krot-transport"
keywords     = ["tunnel", "quic", "ngrok", "transport", "self-hosted"]
categories   = ["network-programming", "asynchronous"]

[lints]
workspace = true

[dependencies]
krot-proto = { workspace = true }
tokio      = { workspace = true }
quinn      = { workspace = true }
rustls     = { workspace = true }
serde      = { workspace = true }
postcard   = { workspace = true }
bytes      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time", "macros"] }
